# pytest_api_testing

./: Jenkinsfile  README.md  pyproject.toml
src/enums/: global_enums.py
src/schemas/: entity.py
tests/: test_single_api.py
