[project]
name = "pytest-api-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "TimurSamatov",email = "cooool.loki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
